force-app/main/default/objects/Call_Detail1__c/fields/Call_To__c.field-meta.xml
<CustomField>
    <fullName>Call_To__c</fullName>
    <label>Call To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>