force-app/main/default/objects/Call_Detail1__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>IF( TEXT(Status__c) =&apos;Inbound Call&apos; ,  Call_From__c ,  Call_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>