force-app/main/default/objects/Call_Detail1__c/fields/Execuive_Number__c.field-meta.xml
<CustomField>
    <fullName>Execuive_Number__c</fullName>
    <formula>IF( TEXT(Status__c) =&apos;Inbound Call&apos; , Call_To__c  , Call_From__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execuive Number</label>
    <type>Text</type>
</CustomField>