force-app/main/default/objects/Call_Detail1__c/fields/Executive_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Executive_Contact_No__c</fullName>
    <label>Executive Contact No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>