force-app/main/default/objects/Call_Detail1__c/fields/Landing_Number__c.field-meta.xml
<CustomField>
    <fullName>Landing_Number__c</fullName>
    <label>Landing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>