force-app/main/default/objects/Call_Detail1__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>