force-app/main/default/objects/Call_Detail1__c/fields/Parent_URL__c.field-meta.xml
<CustomField>
    <fullName>Parent_URL__c</fullName>
    <label>Parent URL</label>
    <type>Url</type>
</CustomField>